--- a/layouts/_default/_markup/render-heading.html
+++ b/layouts/_default/_markup/render-heading.html
@@ -1,11 +1,11 @@
+{{- $anctxt := (anchorize .Text) }}
+{{- $ancs := findRE $anctxt .Anchor }}
+{{- $preanc := "" }}
+{{- range first 1 $ancs}}
+    {{- $preanc = .}}
+{{- end}}
 {{- if or (eq .Page.Site.Params.product "Garoon") (eq .Page.Site.Params.product "Mailwise") (eq .Page.Site.Params.product "Office") }}
     {{- if eq .Level 6 }}
-        {{- $anctxt := (anchorize .Text) }}
-        {{- $ancs := findRE $anctxt .Anchor }}
-        {{- $preanc := "" }}
-        {{- range first 1 $ancs}}
-            {{- $preanc = .}}
-        {{- end}}
         {{- if eq $preanc "" }}
 <div class="adjustAnchor">
     <div class="h6-anc" id="{{.Anchor | safeURL}}">{{.Text | safeHTML}}</div>
@@ -21,7 +21,11 @@
     {{- if and (eq .Page.Site.Params.product "slash") (eq .Level 6) }}
 <div class="h6-noanc">{{.Text | safeHTML}}</div>
     {{- else }}
+        {{- if and (ne .Page.IsHome true) (ne .Page.Params.aliases nil) }}
+            {{- template "anchorlink2" (dict "ti" . "link" .Page.RelPermalink "al" (index .Page.Params.aliases 0) "ids" .Page.Site.Params.id_search) }}
+        {{- else }}
 <h{{.Level}} id="{{.Anchor | safeURL}}" role="heading">{{.Text | safeHTML }}</h{{.Level}}>
+        {{- end }}
     {{- end }}
 {{- end }}
 
