--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,12 +3,17 @@
 {{- else}}
 {{- partial "head" . }}
 {{- partial "header" . }}
+<div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true }}
     {{ partial "meganav" . }}
 {{- end }}
 <div id="page" class="page" >
     <div id="tree" class="tree-wrap">
-        {{ partial "treenav" . }}
+        {{- if eq $.Site.Params.product "kintone" }}
+            {{ partial "treenav3" . }}
+        {{- else }}
+            {{ partial "treenav" . }}
+        {{- end }}
     </div>
     <div id="contents" class="contents-wrap">
         {{- if and (eq $.Site.Params.product "Garoon") (ne $.Site.Params.languageCode "ja-jp") (ne $.Site.Params.languageCode "ja-cn") }}
@@ -36,7 +41,7 @@
 
         </main>
     </div>
-    {{- if ne $.Site.Params.meganav true -}}
+    {{- if ne $.Site.Params.toc_in_tree true -}}
     <div class="sidebar-wrap">
         <nav id="rightside-bar">
             <h2 class="toc-title">{{ i18n "In_this_article" }}</h2>
