--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -122,6 +122,7 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-5N49D3');</script>
     <!-- End Google Tag Manager -->
+    {{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}
     <!-- Google Tag Manager for kintone hive -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -129,5 +130,6 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-WQ8K7Z8');</script>
     <!-- End Google Tag Manager for kintone hive -->
+    {{- end }}
   </head>
   <body class="font-{{.Lang}}">
