--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -43,6 +43,10 @@
   font-weight: bold;
 }
 
+.article dl > dt:nth-child(n + 2) {
+  margin-top: 14px;
+}
+
 .article dd {
   margin-bottom: 7px;
   padding-left: 20px;
