--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{.Site.LanguageCode}}" prefix="og: https://ogp.me/ns#"> 
   <head>
-    {{- $buildnum := (now.Format "2006010203") }}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=11" />
+    {{- $buildnum := (now.Format "200601020304") }}
+    <meta name="date" content="{{$buildnum}}" scheme="YYYYMMDDmmhh">
     {{- $title := partial "title" .}}
     {{- $sitename := "" }}
     {{- $servicetype := "" }}
