--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -2222,7 +2222,7 @@ i.index-pdf {
 
 /* for print out */
 @media print {
-    nav, header, footer, iframe, #enquete, #tree-nav, #goto-top, .id-headding-button {
+    nav, header, footer, iframe, #enquete, #tree-nav, #goto-top, .id-headding-button, .id-link-button, .id-bar {
         display: none !important;
     }
     .font-ja, html[lang="ja-jp"], html[lang="ja-cn"] {
