--- a/layouts/gr/sitemap/section.html
+++ b/layouts/gr/sitemap/section.html
@@ -1,5 +1,6 @@
 {{- partial "head" . }}
 {{- partial "header" . }}
+<div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true }}
     {{ partial "meganav" . }}
 {{- end }}
