--- a/layouts/of/subsection_top/section.html
+++ b/layouts/of/subsection_top/section.html
@@ -3,6 +3,7 @@
 {{- else }}
 {{- partial "head" . }}
 {{- partial "header" . }}
+<div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true -}}
     {{ partial "meganav" . }}
 {{- end -}}
