--- a/layouts/search_id/single.html
+++ b/layouts/search_id/single.html
@@ -1,6 +1,7 @@
 {{- partial "head" . }}
 <link rel="stylesheet" href="{{ "stylesheets/search_id.css" | relURL }}">
 {{- partial "header" . }}
+<div class="page-pad"></div>
 {{- if eq $.Site.Params.meganav true -}}
     {{- partial "meganav" . }}
 {{- end -}}
