--- a/layouts/gr/section_top_purpose/section.html
+++ b/layouts/gr/section_top_purpose/section.html
@@ -3,6 +3,7 @@
 {{- else }}
 {{- partial "head" . }}
 {{- partial "header" . }}
+<div class="page-pad"></div>
 {{- partial "meganav" . }}
 <div class="article clearfix">
     <div class="sect-wrap">
