--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -287,13 +287,15 @@ li .lang-title {
     background-color: #0d7b91;
 }
 /* -------------------- end of Language selector */
-
+.page-pad {
+    height: 94px;
+}
 .page {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     max-width: 1300px;
-    margin: 56px auto 0 auto;
+    margin: 0 auto 0 auto;
     width: 100%;
     overflow: hidden;
 }
@@ -423,7 +425,7 @@ li .lang-title {
     width: 100%;
     position: relative;
     font-size: .75em;
-    margin: 94px auto 0;
+    margin: 0 auto 0;
 }
 .g-nav-title-wrap {
     white-space: nowrap;
@@ -632,6 +634,7 @@ li .lang-title {
 /* Breadcrumb -------------------- */
 .breadcrumb {
     padding-top: 10px;
+    z-index: -1;
 }
 
 ul.breadcrumbs {
@@ -751,6 +754,7 @@ h6 + .id-link-button {
     display: none;
     width: auto;
     height: auto;
+    overscroll-behavior-y: contain;
 }
 #tree-main ul {
     padding-inline-start: 10px;
@@ -1412,12 +1416,12 @@ table .wd10 {
     position: relative;
     float: left;
 }
-.col-tile:not(.col-flat):hover,.col-video:hover {
+.col-tile:not(.col-flat):hover, .col-video:hover {
     transform: scale(1.015);
     background-color: #FFFFFF;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
 }
-.col-tile > a,.col-video > a {
+.col-tile > a, .col-video > a  {
     display: block;
     position: absolute;
     width: 100%;
@@ -1694,7 +1698,7 @@ i.index-pdf {
     background: #fff;
     font-size: 0.875rem;
     width: 100%;
-    z-index: 1;
+    z-index: 999;
 }
 .footer::before {
     content: '';
@@ -1704,7 +1708,7 @@ i.index-pdf {
     overflow: hidden;
     width: 100%;
     height: 4px;
-    z-index: 1;
+    z-index: 999;
     background-image: radial-gradient(circle farthest-corner at left bottom, #e94f90 0%, rgba(233, 79, 144, .01) 100%), radial-gradient(circle farthest-corner at right bottom, #287bf4 0%, rgba(40, 123, 244, .01) 100%);
 }
 .footer a {
@@ -1772,7 +1776,7 @@ i.index-pdf {
 
 /* Enquete -------------------- */
 #enquete {
-    display: block;
+    display: none;
     width: 100%;
     padding: 3px 0 9px 6px;
     background-color: rgba(29,30,31,0.8);
@@ -1921,6 +1925,10 @@ i.index-pdf {
     .current-lang {
         padding-top: 10px;
     }
+
+    .page-pad {
+        height: 56px;
+    }
     .page {
         flex-direction: row;
     }
@@ -1969,7 +1977,6 @@ i.index-pdf {
     /* mega menu ------------------------- */
     .g-nav {
         font-size: 1.125em;
-        margin: 64px auto .2em;
     }
     .g-col {
         border: none;
