--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -8,6 +8,10 @@
     justify-content: space-between;
 }
 
+.page-pad {
+    height: 54px;
+}
+
 .hero {
     height: 60px;
     display: none;
@@ -15,7 +19,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 56px;
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: left top;
