--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -321,6 +321,10 @@ background: rgba(255, 255, 255, 0.9);
     border-top: solid 2px #000;
     border-bottom: solid 2px #000;
 }
+.admonition.reference .fas {
+    color: #000;
+    font-size: 1rem;
+}
 .admonition.warning {
     border-top: solid 3px #ff9d12;
     border-bottom: solid 3px #ff9d12;
