--- a/layouts/partials/meganav_kt.html
+++ b/layouts/partials/meganav_kt.html
@@ -13,7 +13,10 @@
 {{- $menu_ids := (slice "") }}
 {{- $menu_titles := (slice "") }}
 {{- $menu_urls := (slice "") }}
-{{- $menufile := printf "csv/menuitems_%s_%s.csv" $.Site.Language.Lang $.Site.Params.TargetRegion}}
+{{- $menufile := printf "csv/%s/menuitems_%s.csv" $.Site.Language.Lang $.Site.Params.TargetRegion}}
+{{- if ne (os.FileExists $menufile) true }}
+  {{- $menufile = printf "csv/menuitems_%s_%s.csv" $.Site.Language.Lang $.Site.Params.TargetRegion}}
+{{- end }}
 {{- range $i, $r := getCSV "," $menufile }}
     {{- $menu_ids = $menu_ids | append (index $r 0) }}
     {{- $menu_titles = $menu_titles | append (index $r 1) }}
