--- a/static/stylesheets/custom_gr.css
+++ b/static/stylesheets/custom_gr.css
@@ -357,6 +357,9 @@ background: rgba(255, 255, 255, 0.9);
 /* -------------------- End of admonition */
 
 /* step list ----------------------------- */
+.step-list {
+    width: auto !important;
+}
 .step-list, .step-line, .step-link {
     border: 0 !important;
 }
