liの子要素となったulにmargin-topを設定する

--- a/static/stylesheets/custom_general.css
+++ b/static/stylesheets/custom_general.css
@@ -28,6 +28,10 @@
     margin-bottom: 7px;
 }
 
+.article li > ul {
+    margin-top: 7px;
+}
+
 .h6-noanc {
     margin-top: 0px;
     margin-bottom: 7px;
