--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -718,6 +718,37 @@ h6 + .id-link-button {
     z-index: 999;
 }
 
+
+.codeblock-wrapper {
+    position: relative;
+}
+
+.codeblock-copy-button {
+    display: block;
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    padding: 4px 8px;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #fff;
+}
+
+.codeblock-copy-button:hover {
+    background-color: #ECEAF7;
+}
+
+.codeblock-copy-message {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 48px;
+    padding: .5em;
+    color: #fff;
+    background-color: rgba(29,30,29,0.8);
+    z-index: 999;
+}
+
 /* tree navigation -------------------- */
 .tree-wrap {
     height: 100%;
